--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,6 +2,8 @@
   "store.home": { 
     "blocks": [
       "rich-text",
+      "responsive-layout.desktop#desktop",
+      "responsive-layout.mobile#mobile",
       "info-card#button-right",
       "info-card#button-left",
       "flex-layout.row",
@@ -27,7 +29,7 @@
       "callToActionMode": "button",
       "callToActionText": "Explore",
       "callToActionUrl": "/sale/d",
-      "textAlignment": "center",
+      "textAlignment": "CENTER",
       "blockClass": "vintage"
     }
   },
@@ -60,7 +62,7 @@
       "isFullModeStyle": true,
       "headline": "Time to rethink your kitchen",
       "callToActionText": "Discover",
-      "textPosition": "center"
+      "textPosition": "CENTER"
     }
   },
 
@@ -82,6 +84,51 @@
     "props": {
       "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
       "maxWidth": "100%"  
+    }
+  },
+
+  "responsive-layout.desktop#desktop": {
+    "children": ["rich-text#desktop", "image#desktop"]
+  },
+
+  "image#desktop": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",      "link": {
+        "url": "/small-appliances/coffee-makers"
+      },
+      "alt": "Coffee Makers Collection",
+      "maxWidth":"100%"
+    }
+  },
+
+  "rich-text#desktop": {
+    "props": {
+      "text": "# Your Coffe, Your Way \n ### New Coffe Makers Collection",
+      "textPosition":"CENTER",
+      "textAlignment":"CENTER"
+    }
+  },
+
+  "responsive-layout.mobile#mobile": {
+    "children":["rich-text#mobile", "image#mobile"]
+  },
+
+  "image#mobile": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
+      "link": {
+        "url": "/small-appliances/coffee-makers"
+      },
+      "alt":"Coffee Makers Collection",
+      "maxWidth":"100%"
+    }
+  },
+
+  "rich-text#mobile": {
+    "props": {
+      "text":"### Your Coffe, Your Way \n #### New Coffe Makers Collection",
+      "textPosition":"CENTER",
+      "textAlignment":"CENTER"
     }
   }
 
