--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,13 +2,13 @@
   "store.home": { 
     "blocks": [
       "rich-text",
-      "responsive-layout.desktop#desktop",
-      "responsive-layout.mobile#mobile",
       "info-card#button-right",
       "info-card#button-left",
       "flex-layout.row",
       "shelf",
-      "slider-layout#home"
+      "slider-layout#home",
+      "responsive-layout.desktop#desktop",
+      "responsive-layout.mobile#mobile"
     ]
   },
 
@@ -103,7 +103,7 @@
 
   "rich-text#desktop": {
     "props": {
-      "text": "# Your Coffee, Your Way \n ### New Coffe Makers Collection",
+      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection",
       "textPosition": "CENTER",
       "textAlignment": "CENTER"
     }
@@ -126,7 +126,7 @@
 
   "rich-text#mobile": {
     "props": {
-      "text": "### Your Coffee, Your Way \n #### New Coffe Makers Collection",
+      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection",
       "textPosition": "CENTER",
       "textAlignment": "CENTER"
     }
