--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -36,19 +36,19 @@
     }
   },
 
-  "flex-layout.row#qty-sku": {
-    "children": [
-      "sku-selector",
-      "product-quantity",
-      "shipping-simulator"
-    ]
-  },
-
   "product-price": {
     "props": {
       "showSavings": true,
       "showListPrice": true
     }
+  },
+
+  "flex-layout.row#qty-sku": {
+    "children": [
+      "shipping-simulator",
+      "sku-selector",
+      "product-quantity"
+    ]
   }
 
 
